Resolved merge conflict + added product list editing